# IronCloak

./: Cargo.toml  README.md  ironcloak.toml
langs/: en.json  es.json  fr.json
src/: config.rs  i18n.rs  main.rs  socks.rs  tor.rs
src/gui/: mod.rs  state.rs  tray.rs  window.rs
